sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value nombreValeurs
	for (i <- 0 to nombreValeurs - 2){
                       ^